--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -29,7 +29,7 @@ import image from '@/images/img1.webp';
 		<div class="flex justify-start gap-2 pt-3 md:pt-6">
 			<a
 				target="_blank"
-				href="https://www.linkedin.com/in/martin-juri-nam-55976249/"
+				href="https://www.linkedin.com/in/martin-juri-nam/"
 				aria-label="LinkedIn"
 				class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-1 border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)]"
 			>
@@ -47,7 +47,7 @@ import image from '@/images/img1.webp';
 
 			<a
 				target="_blank"
-				href="/pdf/Cv_Martin_Juri_Feb25_es.pdf"
+				href="/pdf/Cv_Martin_Juri_Mar25_es.pdf"
 				aria-label="Currículum Vitae"
 				class="text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-[var(--white-icon-tr)] p-3 rounded-xl bg-[#1414149c] hover:bg-[var(--white-icon-tr)] flex items-center gap-2"
 			>
